Implemented read scale & update deployment replica
